-- 0.8xx ---
* Add new hublist server hublist.pwiam.com; blacklist and remove discontinued or inaccessible server addresses
* Add AboutConfig frame for testing and debugging purposes (iceman50, emtee)
* [L#1682791] Block possible unencrypted direct private message connection attempts (fix adapted from AirDC++) (emtee)
* Upgrade compiler for better performance; allows further optimizations to modern Windows versions (cologic, emtee)
* Allow copy of hub address with keyprint on secure hubs (code adapted from AirDC++) (emtee)
* Require SSSE3 for 64-bit builds (cologic)

-- 0.871 2022-04-01 --
* Update OpenSSL to version 1.1.1n
* Offer the current testing release to a random subset of users at start (emtee)
* [L#1965620] Restore TLS connections to certain servers with multiple hostnames (fix adapted from AirDC++) (emtee)
 
-- 0.870 2021-09-09 --
* Adaptively determine fastest TLS 1.3 ciphersuites (klondike)
* [L#1703150] Fix crash when closing NMDC hubs (emtee)
* [L#1909853] Allow the operating system to determine the best socket buffer sizes by default (maksis)
* Add option to exclude encrypted private messages from logs (emtee)
* [L#1445330] Allow CCPM on unencrypted ADC hubs (emtee)
* [L#1853692] Blacklist an unmaintained hublist server
* [L#1829064] Add new hublist server dcnf.github.io
* [L#1815377] Fix a bug that could keep files from hashing due to CRC errors when automatic .sfv checking is enabled (emtee)
* [L#1910274] Don't add incomplete TTH trees to hash database (cologic)
* [L#1649066] Don't share files/directories with non-UTF-8 names on Linux/macOS/BSDs (cologic)
* Fix GeoIP country in the Transfer View and Search window (emtee)
* Keep existing GeoIP files after an unsuccessful download (emtee)
* Update OpenSSL to version 1.1.1k
* Require TLS 1.2 or newer (currently only TLS 1.3)-based ADCS connections (cologic)
* "Require TLS ADC client-client connections" setting now on by default (poy)