@@ -45,7 +45,7 @@ public:
 	virtual void privateMessage(const OnlineUser& aUser, const string& aMessage, bool /*thirdPerson*/ = false);
 	virtual void sendUserCmd(const UserCommand& command, const ParamMap& params);
 	virtual void search(int aSizeType, int64_t aSize, int aFileType, const string& aString, const string& aToken, const StringList& aExtList);
-	virtual void password(const string& aPass) { send("$MyPass " + fromUtf8(aPass) + "|"); }
+	virtual void password(const string& aPass);
 	virtual void infoImpl() { myInfo(false); }
 
 	virtual size_t getUserCount() const { Lock l(cs); return users.size(); }
@@ -80,6 +80,8 @@ private:
 	string lastMyInfoC;
 	string lastMyInfoD;
 	string localIp;
+
+	string salt;
 
 	typedef list<pair<string, uint32_t> > FloodMap;
 	typedef FloodMap::iterator FloodIter;
