@@ -41,7 +41,8 @@ public:
 		TLS_BIT,
 		OLD_CLIENT_BIT,
 		NO_ADC_1_0_PROTOCOL_BIT,
-		NO_ADCS_0_10_PROTOCOL_BIT
+		NO_ADCS_0_10_PROTOCOL_BIT,
+		BDC_BIT
 	};
 
 	/** Each flag is set if it's true in at least one hub */
@@ -52,7 +53,8 @@ public:
 		TLS = 1<<TLS_BIT,				//< Client supports TLS
 		OLD_CLIENT = 1<<OLD_CLIENT_BIT,  //< Can't download - old client
 		NO_ADC_1_0_PROTOCOL = 1<<NO_ADC_1_0_PROTOCOL_BIT,	//< Doesn't support "ADC/1.0" (dc++ <=0.703)
-		NO_ADCS_0_10_PROTOCOL = 1<< NO_ADCS_0_10_PROTOCOL_BIT	//< Doesn't support "ADCS/0.10"
+		NO_ADCS_0_10_PROTOCOL = 1<< NO_ADCS_0_10_PROTOCOL_BIT,	//< Doesn't support "ADCS/0.10"
+		BDC = 1<< BDC_BIT
 	};
 
 	struct Hash {
@@ -68,6 +70,7 @@ public:
 
 	bool isOnline() const { return isSet(ONLINE); }
 	bool isNMDC() const { return isSet(NMDC); }
+	bool isBDC() const { return isSet(BDC); }
 
 private:
 	CID cid;
